@@ -16,11 +16,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class AgencyOfficeService {
+
+    private static final String AGENCY_NOT_FOUND = "Agency not found with id: ";
+    private static final String AGENCY_OFFICE_NOT_FOUND = "Agency office not found with id: ";
 
     private final AgencyOfficeRepository agencyOfficeRepository;
     private final AgencyRepository agencyRepository;
@@ -44,7 +46,7 @@ public class AgencyOfficeService {
     @Transactional
     public AgencyOfficeDTO create(AgencyOfficeDTO dto) {
         Agency agency = agencyRepository.findById(dto.getAgencyId())
-                .orElseThrow(() -> new ResourceNotFoundException("Agency not found with id: " + dto.getAgencyId()));
+                .orElseThrow(() -> new ResourceNotFoundException(AGENCY_NOT_FOUND + dto.getAgencyId()));
 
         Address address = addressRepository.findById(dto.getOfficeAddressId())
                 .orElseThrow(() -> new ResourceNotFoundException("Address not found with id: " + dto.getOfficeAddressId()));
@@ -61,33 +63,33 @@ public class AgencyOfficeService {
     }
 
     public List<AgencyOfficeDTO> getAll() {
-        return agencyOfficeRepository.findAll().stream()
+        return agencyOfficeRepository.findAllWithDetails().stream()
                 .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public AgencyOfficeDTO getById(Integer id) {
         AgencyOffice office = agencyOfficeRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Agency office not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(AGENCY_OFFICE_NOT_FOUND + id));
         return mapToDTO(office);
     }
 
     public List<AgencyOfficeDTO> getByAgencyId(Integer agencyId) {
         agencyRepository.findById(agencyId)
-                .orElseThrow(() -> new ResourceNotFoundException("Agency not found with id: " + agencyId));
-        return agencyOfficeRepository.findByAgency_AgencyId(agencyId).stream()
+                .orElseThrow(() -> new ResourceNotFoundException(AGENCY_NOT_FOUND + agencyId));
+        return agencyOfficeRepository.findByAgencyIdWithDetails(agencyId).stream()
                 .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public AgencyOfficeDTO update(Integer id, AgencyOfficeDTO dto) {
         AgencyOffice office = agencyOfficeRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Agency office not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(AGENCY_OFFICE_NOT_FOUND + id));
 
         if (dto.getAgencyId() != null) {
             Agency agency = agencyRepository.findById(dto.getAgencyId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Agency not found with id: " + dto.getAgencyId()));
+                    .orElseThrow(() -> new ResourceNotFoundException(AGENCY_NOT_FOUND + dto.getAgencyId()));
             office.setAgency(agency);
         }
 
@@ -113,7 +115,7 @@ public class AgencyOfficeService {
     @Transactional
     public void delete(Integer id) {
         AgencyOffice office = agencyOfficeRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Agency office not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(AGENCY_OFFICE_NOT_FOUND + id));
 
         if (busRepository.existsByOffice_OfficeId(id)) {
             throw new BadRequestException("Office has buses assigned. Cannot delete.");
